--- a/index.html
+++ b/index.html
@@ -114,17 +114,15 @@
     <div class="taskInput">
     <label for="done"></label>
     <input type="radio" id="done" name="">
-    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, magni!</span>
     <div class="function">
     <!--<button class="delete">0</button>
     <button class="edit">0</button>-->
 </div>
 </div>
 <div class="taskInput">
-    <label for="done"></label>
+    <label for="done">
     <input type="radio" id="done" name="">
-    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, magni!</span>
-    <div class="function">
+    <div class="function"></label>
    <!-- <button class="delete">0</button>
     <button class="edit">0</button>-->
 </div>
